--- a/subprojects/docs/src/samples/native-binaries/google-test/build.gradle
+++ b/subprojects/docs/src/samples/native-binaries/google-test/build.gradle
@@ -55,6 +55,17 @@ model {
 // END SNIPPET configure-test-binary
 // END SNIPPET complete-example
 
+model {
+    binaries {
+        all {
+            if (toolChain instanceof Gcc) {
+                cppCompiler.args '-std=c++03', '-D_GLIBCXX_USE_CXX11_ABI=0'
+                linker.args '-std=c++03'
+            }
+        }
+    }
+}
+
 tasks.withType(RunTestExecutable) {
     args "--gtest_output=xml:test_detail.xml"
 }
