--- a/subprojects/docs/src/samples/java/apt/build.gradle
+++ b/subprojects/docs/src/samples/java/apt/build.gradle
@@ -20,19 +20,12 @@ repositories {
 }
 
 // START SNIPPET annotation-processing
-configurations {
-    apt
-}
 dependencies {
     // The dagger compiler and its transitive dependencies will only be found on annotation processing classpath
-    apt 'com.google.dagger:dagger-compiler:2.8'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 
-    // And we still need the Dagger annotations on the compile classpath itself
+    // And we still need the Dagger library on the compile classpath itself
     implementation 'com.google.dagger:dagger:2.8'
-}
-
-compileJava {
-    options.annotationProcessorPath = configurations.apt
 }
 // END SNIPPET annotation-processing
 
