Needs to explicitly depend on configuration
Ensure that composite build scenarios work properly.

--- a/subprojects/docs/src/samples/userguide/dependencies/accessingMetadataArtifact/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/accessingMetadataArtifact/build.gradle
@@ -10,6 +10,8 @@ dependencies {
 }
 
 task printGuavaMetadata {
+    dependsOn configurations.compileClasspath
+
     doLast {
         def resolutionResult = configurations.compileClasspath.incoming.resolutionResult
         def componentIds = resolutionResult.allDependencies.collect { it.selected.id }
