--- a/subprojects/docs/src/samples/userguide/dependencies/iteratingArtifacts/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/iteratingArtifacts/build.gradle
@@ -13,6 +13,8 @@ dependencies {
 
 //START SNIPPET iteration-task
 task iterateScmArtifacts {
+    dependsOn configurations.scm
+
     doLast {
         configurations.scm.files.each {
             println it.absolutePath
