Ignore CachedPlatformScalaCompileIntegrationTest on Java 9
Zinc does not work on Java 9.

+review REVIEW-6575

--- a/gradle/java9.gradle
+++ b/gradle/java9.gradle
@@ -100,6 +100,7 @@ if (testJavaHome) {
                 "PlayJavaAnnotationProcessingIntegrationTest",
                 "ScalaAnnotationProcessingIntegrationTest",
                 "CachedScalaCompileIntegrationTest",
+                "CachedPlatformScalaCompileIntegrationTest",
                 "ScalaCompileRelocationIntegrationTest",
                 "UpToDateScalaCompileIntegrationTest",
                 "ScalaDocIntegrationTest",
