--- a/subprojects/docs/src/samples/userguide/dependencies/declaringDependenciesWithConcreteVersion/build.gradle
+++ b/subprojects/docs/src/samples/userguide/dependencies/declaringDependenciesWithConcreteVersion/build.gradle
@@ -1,4 +1,4 @@
-//START SNIPPET binary-dependencies
+//START SNIPPET dependencies
 apply plugin: 'java-library'
 
 repositories {
@@ -8,7 +8,7 @@ repositories {
 dependencies {
     implementation 'org.springframework:spring-web:5.0.2.RELEASE'
 }
-//END SNIPPET binary-dependencies
+//END SNIPPET dependencies
 
 task copyLibs(type: Copy) {
     from configurations.compileClasspath
