We likely do not need a reference to the Map anymore from other places

--- a/gradle/java9plus.gradle
+++ b/gradle/java9plus.gradle
@@ -13,7 +13,7 @@ if (testJavaHome) {
     if (isSupportedJavaVersion(currentJavaVersion)) {
 
         tasks.withType(org.gradle.testing.IntegrationTest) {
-            ext.excludedTests = [
+            def excludedTests = [
                 // TODO requires investigation
                 "DaemonGroovyCompilerIntegrationTest": [JavaVersion.VERSION_1_9, JavaVersion.VERSION_1_10],
                 "DaemonJavaCompilerIntegrationTest": [JavaVersion.VERSION_1_9, JavaVersion.VERSION_1_10],
