--- a/build.gradle
+++ b/build.gradle
@@ -112,6 +112,7 @@ buildTypes {
 }
 
 ext {
+    gradle_kotlin_dsl_version = '0.15.4'
     jvm = org.gradle.internal.jvm.Jvm.current()
     javaVersion = JavaVersion.current()
     isCiServer = System.getenv().containsKey("CI")
@@ -171,8 +172,8 @@ ext {
 apply from: "gradle/buildScanUserData.gradle"
 apply from: "gradle/taskCacheBuildScanUserData.gradle"
 apply from: "gradle/versioning.gradle"
-apply from: "gradle/dependenciesVersions.gradle"
 apply from: "gradle/dependencies.gradle"
+apply from: "gradle/dependenciesMetadataRules.gradle"
 apply from: "gradle/minifiedDependencies.gradle"
 apply from: "gradle/testDependencies.gradle"
 apply from: "gradle/wrapper.gradle"
@@ -262,8 +263,8 @@ def patchedExternalModules = files({ -> fileTree(patchedExternalModulesDir).file
 patchedExternalModules.builtBy 'patchExternalModules'
 
 dependencies {
-    externalModules "org.gradle:gradle-kotlin-dsl:${versions.gradle_kotlin_dsl}"
-    externalModules "org.gradle:gradle-kotlin-dsl-tooling-builders:${versions.gradle_kotlin_dsl}"
+    externalModules "org.gradle:gradle-kotlin-dsl:${gradle_kotlin_dsl_version}"
+    externalModules "org.gradle:gradle-kotlin-dsl-tooling-builders:${gradle_kotlin_dsl_version}"
     coreRuntime project(':launcher')
     coreRuntime project(':runtimeApiInfo')
     runtime project(':wrapper')
