Rewrite module.swiftdeps with information from Gradle's up-to-date checks

--- a/subprojects/platform-native/platform-native.gradle
+++ b/subprojects/platform-native/platform-native.gradle
@@ -21,6 +21,8 @@ plugins {
 dependencies {
     compile libraries.groovy
     compile libraries.commons_io
+    compile libraries.snakeyaml
+    
     compile project(':core')
     compile project(':platformBase')
     compile project(':diagnostics')
