--- a/gradle/idea.gradle
+++ b/gradle/idea.gradle
@@ -3,7 +3,8 @@ import org.jetbrains.gradle.ext.*
 
 buildscript {
     dependencies {
-        classpath files("${rootProject.projectDir.absolutePath}/gradle-idea-ext.jar")
+        classpath files("${rootProject.projectDir.absolutePath}/gradle-idea-ext-0.1-SNAPSHOT.jar")
+        classpath files("${rootProject.projectDir.absolutePath}/gson-2.8.2.jar")
     }
 }
 
@@ -37,19 +38,6 @@ allprojects {
                     // f.e. buildInit module contains such a sourceFolder
                     module.sourceFolders.removeAll {
                         it.url.contains('$MODULE_DIR$/build/')
-                    }
-                }
-                withXml {
-                    def node = it.asNode()
-                    def content = node.component.find { it.'@name' == 'NewModuleRootManager' }.content[0]
-                    content.sourceFolder.each { sourceFolder ->
-                        // make resource directories a java-resource / java-test-resource type in Idea
-                        if(sourceFolder.@url?.endsWith('/resources')) {
-                            sourceFolder.attributes().with {
-                                boolean isTestSource = (remove('isTestSource') == 'true')
-                                put('type', isTestSource ? 'java-test-resource' : 'java-resource')
-                            }
-                        }
                     }
                 }
             }
@@ -164,11 +152,6 @@ limitations under the License."""
                 WHILE_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
                 FOR_BRACE_FORCE = ForceBraces.FORCE_BRACES_ALWAYS
             }
-        }
-
-        gradleSettings {
-            // use wrapper-based sync instead of this line
-            sdkHome = gradle.gradleHomeDir.absolutePath
         }
 
         doNotDetectFrameworks("android", "web")
