Resolve version from extra property to keep versions in sync

--- a/subprojects/docs/docs.gradle
+++ b/subprojects/docs/docs.gradle
@@ -75,7 +75,7 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     testCompile libraries.commons_httpclient
-    testCompile 'org.apache.httpcomponents:httpmime:4.5.5'
+    testCompile "org.apache.httpcomponents:httpmime:${versions.httpclient}"
     testCompile project(":core")
 }
 
